# slice

./: .clang-format  .cmake-format.json  CMakeLists.txt  LICENSE  README.md  helpers.h  slice.h  type_traits.h
tests/: helpers_test.cc  slice_test.cc  type_traits_test.cc
