CMAKE_MINIMUM_REQUIRED(VERSION 3.10)
PROJECT(slice)

SET(CMAKE_C_STANDARD 11)
SET(CMAKE_CXX_STANDARD 17)

ADD_LIBRARY(slice INTERFACE)
TARGET_SOURCES(slice INTERFACE  ${CMAKE_SOURCE_DIR}/helpers.h  ${CMAKE_SOURCE_DIR}/slice.h  ${CMAKE_SOURCE_DIR}/type_traits.h)

INCLUDE_DIRECTORIES(./)

OPTION(CODE_COVERAGE "Enable coverage reporting." ON)
OPTION(BUILD_TESTING "Build the tests." ON)

IF(CODE_COVERAGE AND CMAKE_CXX_COMPILER_ID MATCHES "GNU|Clang")
  ADD_DEFINITIONS(-fprofile-arcs -ftest-coverage)
  ADD_LINK_OPTIONS(--coverage)
ENDIF()

IF(BUILD_TESTING)
  ENABLE_TESTING()
  FIND_PACKAGE(GTest REQUIRED)
  FIND_PACKAGE(Threads REQUIRED)
  INCLUDE_DIRECTORIES(${GTEST_INCLUDE_DIRS})
  ADD_EXECUTABLE(helpers_test tests/helpers_test.cc)
  ADD_EXECUTABLE(type_traits_test tests/type_traits_test.cc)
  ADD_EXECUTABLE(slice_test tests/slice_test.cc)
  TARGET_LINK_LIBRARIES(helpers_test ${GTEST_BOTH_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT})
  TARGET_LINK_LIBRARIES(type_traits_test ${GTEST_BOTH_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT})
  TARGET_LINK_LIBRARIES(slice_test ${GTEST_BOTH_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT})
  ADD_TEST(NAME HELPERS_TEST COMMAND helpers_test)
  ADD_TEST(NAME TYPE_TRAITS_TEST COMMAND type_traits_test)
  ADD_TEST(NAME SLICE_TEST COMMAND slice_test)
ENDIF()
